style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  list-style: none;
  text-decoration: none;
}

html {
  scroll-behavior: smooth;
}

::-webkit-scrollbar {
  width: 1.5rem;
}

::-webkit-scrollbar-track {
  background-color: #a3a3ff;
}

::-webkit-scrollbar-thumb {
  background-color: #c7c7ff;
  border-radius: 1rem;
  border: 0.5rem solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #6666ff;
}

header {
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1000;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 33px 9%;
  background: transparent;
}

.logo {
  font-size: 50px;
  font-weight: 700;
  color: white;
  transition: all 0.55s ease, opacity 0.22s ease;
}

.logo:hover {
  opacity: 0.75;
}

.logo:active {
  opacity: 0.5;
}

.navlist {
  display: flex;
}

.navlist a {
  color: white;
  margin-left: 60px;
  font-size: 30px;
  font-weight: 600;
  border-bottom: 2px solid transparent;
  transition: all 0.55s ease, opacity 0.22s ease;
}

.navlist a:hover {
  border-bottom: 2px solid white;
}

.navlist a:active {
  opacity: 0.5;
}

#menu-icon {
  color: white;
  font-size: 50px;
  z-index: 10001;
  cursor: pointer;
  display: none;
}

.hero {
  height: 100%;
  width: 100%;
  min-height: 100vh;
  background: linear-gradient(225deg, #c7c7ff 0%, #a3a3ff 25%, #6666ff 75%);
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
}

.hero-2 {
  height: 100%;
  width: 100%;
  min-height: 100vh;
  background: linear-gradient(315deg, #c7c7ff 0%, #a3a3ff 25%, #6666ff 75%);
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
}

.hero-3 {
  height: 100%;
  width: 100%;
  min-height: 100vh;
  background: linear-gradient(225deg, #c7c7ff 0%, #a3a3ff 25%, #6666ff 75%);
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
}

section {
  padding: 0 19%;
}

.hero-text h5 {
  font-size: 20px;
  font-weight: 400;
  color: white;
  margin-bottom: 40px;
}

.hero-text h4 {
  font-size: 30px;
  font-weight: 600;
  color: white;
  margin-bottom: 10px;
}

.hero-text h1 {
  font-family: "Permanent Marker", cursive;
  font-size: 100px;
  line-height: 1;
  color: white;
  margin: 0 0 45px;
}

.hero-text p {
  color: white;
  font-size: 20px;
  line-height: 1.9;
  margin-bottom: 40px;
}

.hero-img {
  margin-left: auto;
  margin-right: auto;
}

.hero-img img {
  width: 500px;
  height: auto;
}

.hero-text a {
  display: inline-block;
  color: white;
  background: #3d3d99;
  border: 1px solid transparent;
  padding: 12px 30px;
  line-height: 1.4;
  font-size: 20px;
  font-weight: 500;
  border-radius: 30px;
  text-transform: uppercase;
  transition: all 0.55s ease, opacity 0.22s ease;
}

.hero-text a:hover {
  background: transparent;
  border: 1px solid white;
}

.hero-text a:active {
  opacity: 0.5;
}

.icons {
  position: absolute;
  top: 50%;
  padding: 0 9%;
  transform: translateY(-50%);
}

.icons i {
  display: block;
  margin: 26px 0;
  font-size: 30px;
  color: white;
  transition: all 0.5s ease, opacity 0.22s ease;
}

.icons i:hover {
  color: #c7c7ff;
}

.icons i:active {
  opacity: 0.5;
}

.scroll-down-pg1 {
  position: absolute;
  bottom: 75px;
  right: 9%;
}

.scroll-down-pg1 i {
  display: block;
  padding: 15px;
  font-size: 25px;
  color: white;
  background: #c7c7ff;
  border-radius: 20px;
  transition: all 0.5s ease, opacity 0.22s ease;
}

.scroll-down-pg1 i:hover {
  transform: translateY(-5px);
}

.scroll-down-pg1 i:active {
  opacity: 0.5;
}

.scroll-up-pg2 {
  position: absolute;
  bottom: 150px;
  right: 9%;
}

.scroll-up-pg2 i {
  display: block;
  padding: 15px;
  font-size: 25px;
  color: white;
  background: #c7c7ff;
  border-radius: 20px;
  transition: all 0.5s ease, opacity 0.22s ease;
}

.scroll-up-pg2 i:hover {
  transform: translateY(5px);
}

.scroll-up-pg2 i:active {
  opacity: 0.5;
}

.scroll-down-pg2 {
  position: absolute;
  bottom: 75px;
  right: 9%;
}

.scroll-down-pg2 i {
  display: block;
  padding: 15px;
  font-size: 25px;
  color: white;
  background: #c7c7ff;
  border-radius: 20px;
  transition: all 0.5s ease, opacity 0.22s ease;
}

.scroll-down-pg2 i:hover {
  transform: translateY(-5px);
}

.scroll-down-pg2 i:active {
  opacity: 0.5;
}

.scroll-up-pg3 {
  position: absolute;
  bottom: 150px;
  right: 9%;
}

.scroll-up-pg3 i {
  display: block;
  padding: 15px;
  font-size: 25px;
  color: white;
  background: #c7c7ff;
  border-radius: 20px;
  transition: all 0.5s ease, opacity 0.22s ease;
}

.scroll-up-pg3 i:hover {
  transform: translateY(5px);
}

.scroll-up-pg3 i:active {
  opacity: 0.5;
}

.scroll-down-pg3 {
  position: absolute;
  bottom: 75px;
  right: 9%;
}

.scroll-down-pg3 i {
  display: block;
  padding: 15px;
  font-size: 25px;
  color: white;
  background: #c7c7ff;
  border-radius: 20px;
  transition: all 0.5s ease, opacity 0.22s ease;
}

.scroll-down-pg3 i:hover {
  transform: translateY(-5px);
}

.scroll-down-pg3 i:active {
  opacity: 0.5;
}

@media (max-width: 1535px) {
  header {
    padding: 15px 3%;
    transition: 0.2s;
  }
  .icons {
    padding: 0 3%;
    transition: 0.2s;
  }
  .scroll-down-pg1 {
    right: 3%;
    transition: 0.2s;
  }
  .scroll-up-pg2 {
    right: 3%;
    transition: 0.2s;
  }
  .scroll-down-pg2 {
    right: 3%;
    transition: 0.2s;
  }
  .scroll-up-pg3 {
    right: 3%;
    transition: 0.2s;
  }
  .scroll-down-pg3 {
    right: 3%;
    transition: 0.2s;
  }
  .hero-img img {
    width: 100%;
    height: auto;
  }
  .hero-text h1 {
    font-size: 75px;
    margin: 0 0 30px;
  }
  .hero-text h5 {
    margin-bottom: 25px;
  }
}

@media (max-width: 1195px) {
  section {
    padding: 0 3%;
    transition: 0.2s;
  }
  .hero-text {
    padding-top: 115px;
  }
  .hero-img {
    text-align: center;
  }
  .hero-img img {
    width: 500px;
    height: auto;
  }
  .hero {
    height: 100%;
    gap: 1rem;
    grid-template-columns: 1fr;
  }
  .icons {
    display: none;
  }
  .scroll-down-pg1 {
    display: none;
  }
  .scroll-up-pg2 {
    display: none;
  }
  .scroll-down-pg2 {
    display: none;
  }
  .scroll-up-pg3 {
    display: none;
  }
  .scroll-down-pg3 {
    display: none;
  }
  .navlist a {
    font-size: 20px;
  }
  .logo {
    font-size: 40px;
  }
}

@media (max-width: 1000px) {
  #menu-icon {
    display: block;
  }
  .navlist {
    position: absolute;
    top: 100%;
    right: -100%;
    width: 300px;
    height: 40vh;
    backdrop-filter: blur(15px);
    border-top-left-radius: 30px;
    border-bottom-left-radius: 30px;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 50px 20px;
    transition: all 0.55s ease;
  }
  .navlist a {
    margin-left: 0;
    display: block;
    margin: 7px 0;
  }
  .navlist.open {
    right: 0;
  }
}

@media (max-width: 640px) {
  .hero-img img {
    width: 80%;
    height: auto;
  }
}

